packages/language/src/__tests__/__fixtures__/invalid/duplicate-event-ids.eligian
// Note: New grammar doesn't have named events, so this test is no longer applicable
// Timeline events don't have IDs - they are anonymous time ranges

timeline "test" in ".test-container" using video from "test.mp4" {
  at 0s..5s [
    selectElement("#title")
    addClass("visible")
  ] [
    removeClass("visible")
  ]

  at 10s..15s [
    selectElement("#subtitle")
    addClass("visible")
  ] [
    removeClass("visible")
  ]
}
